--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "prisma": "^6.8.2"
